# medical_diagnosis

./: README.md  final_report.md  final_report_v1.md  final_report_v2.md  pyproject.toml  report.md
src/new_er_diagnosis/: crew.py  main.py  orchestrator.py
src/new_er_diagnosis/config/: agents.yaml  tasks.yaml
