[project]
name = "new_er_diagnosis"
version = "0.1.0"
description = "new_er_diagnosis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.1",
]

[project.scripts]
new_er_diagnosis = "new_er_diagnosis.main:run"
run_crew = "new_er_diagnosis.main:run"
train = "new_er_diagnosis.main:train"
replay = "new_er_diagnosis.main:replay"
test = "new_er_diagnosis.main:test"
run_with_trigger = "new_er_diagnosis.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
